# suits_finance

./: .gitignore  README.md
suits_finance_backend/: .env  .gitignore  Cargo.toml  count.py
suits_finance_backend/src/: lib.rs  main.rs
suits_finance_backend/src/api/: client.rs  mod.rs
suits_finance_backend/src/api/auth/: mod.rs
suits_finance_backend/src/api/endpoints/: ping.rs
suits_finance_backend/src/api/middleware/: audit_log.rs  mod.rs
suits_finance_backend/src/api/returns/: errors.rs  mod.rs  success.rs
suits_finance_backend/src/data/: mod.rs  supabase.rs
suits_finance_backend/src/data/supabase/: audit_log_api.rs  mod.rs
suits_finance_backend/src/telemetry/: audit_log.rs  colors.rs  mod.rs  trace_client.rs
suits_finance_backend/src/utils/: unix_time.rs
suits_finance_frontend/: .env.local  .eslintrc.json  .gitignore  README.md  count.py  i18nConfig.js  jsconfig.json  next-i18next.config.js  next-utils.config.js  next.config.mjs  package-lock.json  package.json  releases.MD  t.json  tailwind.config.js  todo.MD  tsconfig.json
suits_finance_frontend/app/: count.py  global-error.js  globals.css  i18n.js  layout.js  not-found.jsx  page.js
suits_finance_frontend/app/dashboard/: layout.js  page.js
suits_finance_frontend/app/discord-oath2-email-not-verified/: page.js
suits_finance_frontend/app/discord-oath2-user-not-in-guild/: page.js
suits_finance_frontend/app/email-verified/: layout.js  page.js
suits_finance_frontend/app/forgot-password/: layout.js  page.js  styles.module.css
suits_finance_frontend/lib/: utils.ts
(+345 files in other folders)
