[package]
name = "suits_finance_api"
authors = ["Floris @ xylex.ai"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
moka = { version = "0.12.8", features = ["future"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
supabase_rs = "0.3.7"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
